Fix: Align Add Stop link to right corner

--- a/sass/blocks/_hero.scss
+++ b/sass/blocks/_hero.scss
@@ -251,7 +251,7 @@
 
 		.add-stop-link {
 			margin-top: 4px;
-			align-self: flex-start;
+			align-self: flex-end;
 		}
 	}
 
